PROJECT(hug)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1.3)

SET(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(Threads REQUIRED)

SET(HEADERS)
LIST(APPEND HEADERS common.h connection.h queue.h)

SET(SOURCES)
LIST(APPEND SOURCES common.cpp connection.cpp hug.cpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/asio/asio/include)

ADD_EXECUTABLE(hug ${SOURCES} ${HEADERS} ${ASIO_FILES})
TARGET_LINK_LIBRARIES(hug ${CMAKE_THREAD_LIBS_INIT})
