PROJECT(hug)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1.3)

SET(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(Threads REQUIRED)

SET(HEADERS common.h connection.h queue.h slab.h)

SET(SOURCES common.cpp connection.cpp hug.cpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/asio/asio/include)

ADD_EXECUTABLE(hug ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(hug ${CMAKE_THREAD_LIBS_INIT})
